--- a/favourites.css
+++ b/favourites.css
@@ -9,34 +9,18 @@ body {
     background-attachment: fixed;
     background-image: url("./backgroup-image.jpg");
     background-repeat: no-repeat;
-    color: rgb(217, 170, 107);
+    color: rgb(23, 99, 230);
 }
 
-#title {
-    margin: 0px;
-}
-
-.boder-style {
+.btn {
     height: 30px;
-    border-radius: 11px;
-    margin: 0px 4vw;
-    justify-content: space-evenly;
+    border-radius: 12px;
     border-color: blueviolet;
+    color: rgb(101, 182, 211);
+    margin: 20px;
 }
 
-#search-bar {
-    height: 30px;
-    width: 40vw;
-    border-radius: 25px;
-    padding: 8px;
-}
-
-#header-container {
-    padding: 2px 0px;
-    width: 100%;
-}
-
-#container {
+#list {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
